--- a/bosh-release/jobs/install_broker_api/templates/ctl.erb
+++ b/bosh-release/jobs/install_broker_api/templates/ctl.erb
@@ -1,1 +1,33 @@
 #! /bin/bash
+RUN_DIR=/var/vcap/sys/run/web_api
+LOG_DIR=/var/vcap/sys/log/web_api
+PIDFILE=${RUN_DIR}/pid
+
+case $1 in
+
+    start)
+        mkdir -p $RUN_DIR $LOG_DIR
+        chown -R vcap:vcap $RUN_DIR $LOG_DIR
+
+        echo $$ > $PIDFILE
+
+        # Here I need to install .NET Core SDK from either packages or blobs
+
+        # Launch the API
+        export ASPNETCORE_URLS=http://localhost:80
+        dotnet run --no-launch-profile -c Release \
+        >> $LOG_DIR/web_api.stdout.log \
+        2>> $LOG_DIR/web_api.stderr.log
+
+        ;;
+
+    stop)
+        kill -9 'cat $PIDFILE'
+        rm -f $PIDFILE
+
+        ;;
+
+    *)
+    echo "Usage: ctl {start|stop}" ;;
+
+    esac
